# internal/models/setting.go
@@ -1,0 +1,6 @@
+package models
+
+type SettingExcelData struct {
+	Path string `json:"path"`
+	Name string `json:"name"`
+}
